force-app/main/default/objects/Behavior_Type__c/Behavior_Type__c.object-meta.xml
<CustomObject>
    <label>Behavior Type</label>
    <nameField>
        <label>Behavior Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Behavior Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>