force-app/main/default/objects/Behavior_Type__c/fields/Calculation_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Timeframe__c</fullName>
    <label>Calculation Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>