force-app/main/default/objects/Behavior_Type__c/fields/Star_Value__c.field-meta.xml
<CustomField>
    <fullName>Star_Value__c</fullName>
    <label>Star Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>